@@ -1,3 +1,7 @@
+2007-01-26  Scott Reeves <sreeves@novell.com>
+
+	* control-center.c: respect the exit_on_close flag
+
 2007-01-26  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* control-center.schemas.in: added 'Change theme' and 'Set preferred
